[package]
name = "getting-started"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = [
	"derive",
] }


[dev-dependencies]
sp-core = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"}
sp-io = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"}
sp-runtime = {git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master"}

[features]
default = ["std"]
std     = ["codec/std", "scale-info/std", "frame-support/std", "frame-system/std"]
